Solved: sticky bar wont move when the rest of the page scrolling. Adjust scrollbar colors

--- a/frontend/src/styles/components/_groupBar.css
+++ b/frontend/src/styles/components/_groupBar.css
@@ -1,33 +1,32 @@
 #groupSideBar {
-  flex: 3;
+  width: 330px;
   height: calc(100vh - 50px);
   overflow-y: scroll;
+  position: -webkit-sticky;
   position: sticky;
-  top: 50px;
+  top: 0;
   padding: 50px;
   justify-content: space-between;
 }
 
 ::-webkit-scrollbar {
-  width: 2px;
+  width: 1px;
 }
 
 ::-webkit-scrollbar-track {
-  background-color: red;
-  /* background-color: rgba(153, 153, 153, 0.1); */
+  background-color: white;
 }
 
 ::-webkit-scrollbar-thumb {
-  background-color: blue
-    /* background-color: rgb(179, 179, 179); */
+  background-color: rgba(153, 153, 153, 0.25);
 }
-/* .sidebarWrapper {
+.sidebarWrapper {
   padding: 20px;
-} */
-/* .sidebarTitle{
+} 
+.sidebarTitle{
   position: absolute;
   left: 70px;  
-} */
+}
 .sidebarList {
   padding: 0;
   margin: 0;
